gobmkida/c2/blunder_size
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1363:12: error: expected expression
*( _OWORD *)value = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1363:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)value = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1462:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v27] != 3 && *i == *v26 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1484:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v24] != 3 && *j == *v23 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1509:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v31] != 3 && *k == *v30 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1530:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v35] != 3 && *m == *v34 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/engine/utils.c:1551:6: error: use of undeclared identifier 'byte_9B389F'
if ( byte_9B389F[v39] != 3 && *n == *v38 ) 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/blunder_size/src/obj/1/utils.o] Error 1
